# spike_video

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
notebooks/: application.ipynb  playground.ipynb  prototype.ipynb
src/spike_video/: spike_video.py
